# Lama-devel

./: .gitignore  README.md
bench/: Makefile  VisitorsWrapper.ml  p.ml  vi_demo.ml
regression/: Makefile  test001.lama
runtime/: runtime.c
src/: CConv.ml  Constants.ml  Driver.ml  Function_c.ml  LL.ml  LLVMIR.ml  LLVMIRSM.ml  Language.ml  Makefile  Match.ml  Pprinter.ml  SM.ml  SM_Parser.ml  STD_definition.ml  Scope.ml  X86.ml  a.out  array1.ll  cconv1.t  compile_std.t  dune  lama_stdlib.c  llvm1.lama  partial.t  partial2.t  partial3.t  run.t  test_110.t  test_array.sm  test_array.t  test_array_2.t  test_array_assign.t  test_c.t  test_c2.t  test_case.t  test_char_assign.t  test_deep_expressions.t  test_empty_func.t  test_for.t  test_func.t  (+12 more)
src/test1/: dune  hack1test.ml  test002  test002.s  test002.sm  test003  test003.s  test003.sm  test004  test004.s  test004.sm  test005  test005.s  test005.sm  test1.t  test_regression.sh
stdlib/: Makefile
stdlib/regression/: Makefile
tutorial/: Makefile
