(env
 (dev
  (flags
   (:standard -warn-error -3-7-8-11-13-15-20-26-27-32-39))))

(library
 (name liba)
 (modules CConv Language Pprinter stdpath version X86 SM LL LLVMIRSM Function_c SM_Parser Constants STD_definition)
 (libraries
  GT
  ostap
  ;
  llvm
  llvm.analysis
  llvm.executionengine
  llvm.target
  llvm.scalar_opts
  llvm.all_backends
  str)
 (flags
  (:standard
   -rectypes
   ;-dsource
   ))
 ;  (ocamlopt_flags
 ;   (:standard -dsource))
 (wrapped false)
 (preprocess
  (per_module
   ((action
     (run %{project_root}/src/pp5+gt+plugins+ostap+dump.byte %{input-file}))
    SM
    Language
    Parser
    X86
    )
   ((pps ppx_inline_test ppx_expect)
    CConv
    LL
    LLVMIRSM 
    Function_c
    SM_Parser
    Constants
    STD_definition
    )))
 (preprocessor_deps
  (file %{project_root}/src/pp5+gt+plugins+ostap+dump.byte))
 (inline_tests))

(executable
 (name Driver)
 (flags
  (:standard
   -rectypes
   ;-dsource
   ))
 (modules Driver)
 (libraries liba unix)
 (public_name Driver)
 )

; TODO: understand what's wrong with ostap in native code
; (rule
;  (targets pp5+gt+plugins+ostap+dump.exe)
;  (deps
;   (package GT))
;  (action
;   (run
;    mkcamlp5.opt
;    -package
;    camlp5,camlp5.pa_o,camlp5.pr_dump,camlp5.extend,camlp5.quotations,ostap.syntax,GT.syntax.all,GT.syntax
;    -o
;    %{targets})))

(rule
 (targets pp5+gt+plugins+ostap+dump.byte)
 (deps
  (package GT))
 (action
  (run
   mkcamlp5
   -package
   camlp5,camlp5.pa_o,camlp5.pr_o,ostap.syntax,GT.syntax.all,GT.syntax
   -o
   %{targets})))

(cram
 (deps ./Driver.exe llvm1.lama stdlib.o))

(rule
 (targets stdlib.o)
 (deps lama_stdlib.c)
 (action
  (run
   gcc
   %{deps}
   -c
   -o
   %{targets}
   ;
   )))
